QOL-8616 fix unexpected alignment issue (#424)
* update style

* update test timeout

--- a/src/assets/_project/_blocks/components/banners/_qg-promotional-banner.scss
+++ b/src/assets/_project/_blocks/components/banners/_qg-promotional-banner.scss
@@ -11,7 +11,11 @@
   .qg-promotional-banner__popular-apps {
     .qg-promotional-banner__popular-apps-title{
       font-weight: bold;
+      margin-left: 4px;
+      margin-right: 4px;
     }
+    margin-left: -4px;
+    margin-right: -4px;
   }
   .wrapper {
     @include media-breakpoint-down(xs) {
